crates/macros/tests/ui/example.stderr
error: proc-macro derive panicked
 --> $DIR/example.rs:4:10
  |
4 | #[derive(FixedLayout)]
  |          ^^^^^^^^^^^
  |
  = help: message: NO!
